--- a/AndBible/res/values-id/strings.xml
+++ b/AndBible/res/values-id/strings.xml
@@ -6,75 +6,75 @@
       The copyright to this program is held by it's author.
 -->
 <resources>
-    <string name="app_name">And Bible</string>
+    <string name="app_name">And Alkitab</string>
     <!-- Startup & Help -->
     <string name="splash_top_text">"\n\"Allah berkata, \"Jadilah terang!\" Lalu terang itu jadi.\"\nKejadian 1:3"</string>
-    <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
+    <string name="help_text">Tekan tombol MENU untuk tindakan Pergi ke bab berikutnya atau sebelumnya dengan menggunakan jalur-bola, D-pad atau menggesekkan layar dengan jari Anda</string>
     <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu. The list of existing notes can be accessed via the main menu. \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
-    <string name="version_text">Version %s</string>
-    <string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
+    <string name="version_text">Versi% s</string>
+    <string name="no_sdcard_error">Silahkan masukkan kartu SD dan mulai And Alkitab lagi.</string>
 
     <!-- main menu -->
-    <string name="chooseBook">Document</string>
-    <string name="selectPassage">Passage</string>
-    <string name="search">Find</string>
-    <string name="settings">Settings</string>
-    <string name="history">History</string>
-    <string name="speak">Speak</string>
-    <string name="help">Help</string>
+    <string name="chooseBook">Dokumen</string>
+    <string name="selectPassage">Nats</string>
+    <string name="search">Cari</string>
+    <string name="settings">Pengaturan</string>
+    <string name="history">Sejarah</string>
+    <string name="speak">Berbicara</string>
+    <string name="help">Membantu</string>
 
     <!-- Passage navigation -->
-    <string name="choosePassageBookName">Choose Book</string>
-    <string name="choosePassageChapterName">Choose Chapter</string>
-    <string name="choosePassageVerseName">Choose Verse</string>
+    <string name="choosePassageBookName">Pilih Buku</string>
+    <string name="choosePassageChapterName">Pilih Bab</string>
+    <string name="choosePassageVerseName">Pilih Ayat</string>
 
     <!--  Search -->
-    <string name="search_index">Search Index</string>
-    <string name="index_creation_required">"An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n"</string>
-    <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
-    <string name="index">Index</string>
+    <string name="search_index">Pencarian Indeks</string>
+    <string name="index_creation_required">"Indeks diperlukan untuk pencarian. \n\nIndeks bisa di-download dari internet atau dibuat secara lokal. \n\nDownload Indeks jauh lebih cepat dan indeks didownload mempunyai lebih banyak fitur. \n\nKoneksi internet diperlukan untuk mendownload indeks."</string>
+    <string name="indexing_wait_msg">Ketika indek telah selesai, anda akan dibawa ke layar pencarian.</string>
+    <string name="index">Indeks</string>
     <string name="index_download">Download</string>
-    <string name="index_not_available_for_download">This index is not available for download</string>
-    <string name="index_create">Create</string>
+    <string name="index_not_available_for_download">Indeks ini tidak boleh di-download</string>
+    <string name="index_create">Membuat</string>
 
     <!-- Tasks -->
-    <string name="progress_status">Progress</string>
-    <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
-    <string name="no_tasks_running">There are no tasks currently being executed.</string>
+    <string name="progress_status">Kemajuan</string>
+    <string name="task_kill_warning">Kalau anda memindah ke aplikasi lain sebelum tugas khusus selesai, ada kemungkinan tugas khusus gagal</string>
+    <string name="no_tasks_running">Tidak ada tugas saat ini sedang berjalan.</string>
 
     <!-- Search -->
-    <string name="search_results">Find Results</string>
-    <string name="search_words_group_prompt">Find verses</string>
-    <string name="search_all_words">All words</string>
-    <string name="search_any_word">Any word</string>
-    <string name="search_phrase">Phrase</string>
-    <string name="search_result_count">%d matches found</string>
-    <string name="search_showing_first">Too many matches. Showing first %d</string>
-    <string name="search_bible_section_group_prompt">Search Where</string>
-    <string name="search_all_bible">Whole bible</string>
-    <string name="search_new_testament">New Testament</string>
-    <string name="search_old_testament">Old Testament</string>
-    <string name="search_current_book">Current book</string>
-    <string name="error_executing_search">Invalid search query</string>
+    <string name="search_results">Temukan Hasil</string>
+    <string name="search_words_group_prompt">Mencari ayat-ayat</string>
+    <string name="search_all_words">Semua kata</string>
+    <string name="search_any_word">Kata apapun</string>
+    <string name="search_phrase">Frase</string>
+    <string name="search_result_count">%d hasil pencarian</string>
+    <string name="search_showing_first">Talalu banyak hasil pencarian. Tunjuk yg pertama saja %d</string>
+    <string name="search_bible_section_group_prompt">Dimana Cari</string>
+    <string name="search_all_bible">Seluruh Alkitab</string>
+    <string name="search_new_testament">Pejanjian Baru</string>
+    <string name="search_old_testament">Perjanjian Lama</string>
+    <string name="search_current_book">Sekarang buku</string>
+    <string name="error_executing_search">"Permintaan pencarian salah"</string>
 
     <!-- Preferences -->
-    <string name="prefs_show_verseno_title">Verse numbers</string>
-    <string name="prefs_show_verseno_summary">Show verse numbers</string>
-    <string name="prefs_verse_per_line_title">One verse per line</string>
-    <string name="prefs_verse_per_line_summary">Show each verse on a different line</string>
-    <string name="prefs_show_bookmarks_title">Show bookmark icons</string>
-    <string name="prefs_show_bookmarks_summary">Show icon in bookmarked verses</string>
-    <string name="prefs_show_mynotes_title">Show My Note icons</string>
-    <string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string>
-    <string name="prefs_show_notes_title">Footnotes and x-refs</string>
-    <string name="prefs_show_notes_summary">Show footnotes and cross-references</string>
-    <string name="prefs_show_strongs_title">Show Strong\'s numbers</string>
-    <string name="prefs_show_strongs_summary">Links to Greek &amp; Hebrew definitions</string>
-    <string name="prefs_show_morphology_title">Morphological codes</string>
-    <string name="prefs_show_morphology_summary">Show Robinson\'s Greek morphology</string>
-    <string name="prefs_section_title_title">Section titles</string>
-    <string name="prefs_section_title_summary">Show non-canonical section titles</string>
-    <string name="prefs_red_letter_title">Red Letter</string>
+    <string name="prefs_show_verseno_title">Nomor2 ayat</string>
+    <string name="prefs_show_verseno_summary">Tampilkan nomor-nomor ayat</string>
+    <string name="prefs_verse_per_line_title">Satu ayat satu baris</string>
+    <string name="prefs_verse_per_line_summary">Tampilkan setiap ayat pada baris yang berbeda</string>
+    <string name="prefs_show_bookmarks_title">Tampilkan bookmark ikon2</string>
+    <string name="prefs_show_bookmarks_summary">Tampilkan ikon di ayat2 yg di-bookmark</string>
+    <string name="prefs_show_mynotes_title">Tampilkan ikon Catatan Saya</string>
+    <string name="prefs_show_mynotes_summary">Tampilkan ikon di ayat2 dengan Catatan Saya</string>
+    <string name="prefs_show_notes_title">Catatan kaki dan x-referensi</string>
+    <string name="prefs_show_notes_summary">Tampilkan catatan kaki dan x-referensi</string>
+    <string name="prefs_show_strongs_title">Tampilkan Strong nomor</string>
+    <string name="prefs_show_strongs_summary">Link ke definisi Yunani dan Ibrani</string>
+    <string name="prefs_show_morphology_title">Kode-kode Morfologi</string>
+    <string name="prefs_show_morphology_summary">Tampilkan morfologi Yunani Robinson</string>
+    <string name="prefs_section_title_title">Judul Perikop</string>
+    <string name="prefs_section_title_summary">Tampilkan judul perikop yg non-kanonik</string>
+    <string name="prefs_red_letter_title">Huruf merah</string>
     <string name="prefs_red_letter_summary">Show words of Christ in red</string>
     <string name="prefs_tilt_to_scroll_title">Tilt to scroll</string>
     <string name="prefs_tilt_to_scroll_summary">Tilt device to scroll page down</string>
