--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -209,7 +209,13 @@
     <string name="mynote_add">Add My Note</string>
     <string name="mynote_view_edit">My Note</string>
     <string name="mynote_saved">My Note saved</string>
-
+    
+    <!-- Backup and restore -->
+    <string name="backup">Backup</string>
+    <string name="restore">Restore</string>
+    <string name="backup_success">Notes and bookmarks saved to %s on the SD card</string>    
+    <string name="restore_success">Notes and bookmarks restored from %s on the SD card</string>    
+    
     <!-- Document types -->
     <string name="doc_type_bible">Bible</string>
     <string name="doc_type_commentary">Commentary</string>
