Get confirmation before restoring

--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -212,9 +212,10 @@
     
     <!-- Backup and restore -->
     <string name="backup">Backup</string>
+    <string name="backup_success">My Notes and Bookmarks saved in %s on the SD card</string>    
     <string name="restore">Restore</string>
-    <string name="backup_success">Notes and bookmarks saved in %s on the SD card</string>    
-    <string name="restore_success">Notes and bookmarks restored from %s on the SD card</string>    
+    <string name="restore_confirmation">Overwrite My Notes and Bookmarks?</string>    
+    <string name="restore_success">My Notes and Bookmarks restored from %s on the SD card</string>    
     
     <!-- Document types -->
     <string name="doc_type_bible">Bible</string>
