--- a/AndBible/res/values-iw/strings.xml
+++ b/AndBible/res/values-iw/strings.xml
@@ -13,7 +13,7 @@
   <string name="prefs_interface_locale_title">שפת התוכנה</string>
   <string name="prefs_interface_locale_summary">בחירת שפה עבור התוכנה</string>
   <string name="locale_change_warning">התוכנה תופעל מחדש כדי לשנות את השפה</string>
-  <string name="download_refreshing_book_list">האם לטעון מחדש את רשימת הספרים?</string>
+  <string name="download_refreshing_book_list">טוען רשימת טקסטים זמינים</string>
   <string name="share_verse">שתף פסוק זה ...</string>
   <string name="share_verse_subject">הפסוק הזה נשלח אליך באמצעות And Bible</string>
   <string name="general_book">ספר</string>
@@ -24,7 +24,7 @@
   <string name="no">לא</string>
   <string name="splash_top_text">"\n\"ויאמר אלוהים, \'יהי אור,\' ויהי אור.\"\nבראשית א\' 3"</string>
   <string name="help_text">לחץ על כפתור התפריט לאפשרויות נוספות\n\nמעבר לפרק הבא או הקודם מתבצע ע\"י החלקת האצבע לרוחב המסך</string>
-  <string name="help_text_long">דפדוף\nמעבר לפרק הבא או הקודם מתבצע ע\"י החלקת האצבע לרוחב המסך, או ע\"י גלגלת המכשיר. \n\nלחץ על כפתור התפריט לאפשרויות נוספות \n\הקראה\nלחץ הקראה כדי להקריא בקול רם טקסט מסומן\nלחץ שוב כדי להפסיק את ההקראה \n\nלחיצה ארוכה על פסוק, תתן אפשרויות נוספות לגביו \nלחיצה ארוכה על טקסט תציג אפשרות למידע או למחיקהו \n\סימניות\nניתן להוסיף סימניות מתפריט ההקשר. לניהול הסימניות ניתן להגיע באמצעות התפריט. ניתן גם להוסיף תוויות לסימניות.</string>
+  <string name="help_text_long">"<b>דפדוף</b>\nמעבר לפרק הבא או הקודם מתבצע ע\"י החלקת האצבע לרוחב המסך, או ע\"י גלגלת המכשיר.\nלחיצה כפולה תעביר למצב של מסך מלא.\n\n<b>תפריט</b>\nלחץ על כפתור התפריט לאפשרויות נוספות \nכדי להוריד טקסטים (תנ\"כים) נוספים הכנס לתפריט --&gt; עוד --&gt; הורדת טקסטים\n\n<b>הקראה בקול</b>\nלחץ \"הקראה\" כדי להתחיל או להפסיק הקראה בקול\n\n<b>הערה אישית</b>\nניתן להוסיף הערות ע\"י \"הערה אישית\" בתפריט ההקשר של הפסוק. לרשימת ההערות האישיות ניתן לגשת דרך התפריט הראשי\n\n<b>סימניות</b>\nניתן להוסיף סימניות מתפריט ההקשר. לניהול הסימניות ניתן להגיע באמצעות התפריט. ניתן גם להוסיף תוויות לסימניות.\n\n<b>חיפוש</b>\nבחיפוש ניתן להשתמש בתווים מיוחדים כמו *, ?, AND, OR, NOT (חפש \"Apache Lucene - Query Parser Syntax\" לפרטים נוספים)\n\n<b>תפריטי הקשר</b>\nלחיצה ארוכה על פסוק, תפתח תפריט ובו אפשרויות נוספות לגבי הפסוק.\nלחיצה ארוכה על טקסט תציג אפשרות למידע או למחיקתו.\nלחיצה ארוכה על לחצן ה\"חזור\" במכשיר תפתח את רשימת ההיסטוריה\n"</string>
   <string name="version_text">גרסה %s</string>
   <string name="no_sdcard_error">אנא הכנס כרטיס זכרון, והפעל מחדש את התוכנה.</string>
   <!-- main menu -->
@@ -65,7 +65,7 @@
   <string name="prefs_show_verseno_title">מספרי פסוקים</string>
   <string name="prefs_show_verseno_summary">הצג מספרי פסוקים</string>
   <string name="prefs_show_notes_title">הערות</string>
-  <string name="prefs_show_notes_summary">הצג הערות</string>
+  <string name="prefs_show_notes_summary">הצג הערות שוליים ומראי מקום</string>
   <string name="prefs_show_strongs_title">הצג מספרי Strong</string>
   <string name="prefs_show_strongs_summary">קישורים להגדרות ביוונית ועברית</string>
   <string name="prefs_night_mode_title">מצב לילה</string>
@@ -83,7 +83,7 @@
   <!-- Module download -->
   <string name="download">הורדת טקסטים</string>
   <string name="download_confirmation">האם להוריד טקסט מהאינטרנט ?</string>
-  <string name="download_source_message">אנו מורידים את הטקסטים מ: \nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
+  <string name="download_source_message">אנו מורידים את הטקסטים מ: \nhttp://www.crosswire.org</string>
   <string name="download_document_confirm_prefix">"הורדה "</string>
   <string name="error_downloading">אירעה שגיאה במהלך ההורדה. אנא בדוק את החיבור לאינטרנט.</string>
   <string name="no_internet_connection">לא מצליח להתחבר לאינטרנט</string>
@@ -125,14 +125,14 @@
   <string name="please_wait">אנא המתן...</string>
   <string name="all">הכל</string>
   <string name="tts_lang_not_available">שפה זו אינה זמינה.</string>
-  <string name="all_greek_occurrences">הצג את כל המופעים</string>
-  <string name="all_hebrew_occurrences">הצג את כל המופעים</string>
+  <string name="all_greek_occurrences">מצא את כל המופעים</string>
+  <string name="all_hebrew_occurrences">מצא את כל המופעים</string>
+  <string name="lang_default">ברירת מחדל</string>
+  <string name="no_indexed_bible_with_strongs_ref">עליך להוריד טקסט שמכיל מספרי Strong, וגם להוריד את קובץ האינדקס שלו, ממסך החיפוש</string>
   <string name="choosePassageVerseName">בחר פסוק</string>
   <string name="delete_index">מחק אינדקס חיפוש</string>
   <string name="delete_search_index_doc">האם למחוק את האינדקס של %s ?</string>
-  <string name="lang_default">ברירת המחדל</string>
   <string name="morph_robinson_not_installed">נא להוריד את המילון \'Robinson\'s Morphological Analysis Codes\'</string>
-  <string name="no_indexed_bible_with_strongs_ref">עליך להוריד טקסט שמכיל מספרי Strong, וגם להוריד את קובץ האינדקס שלו, ממסך החיפוש</string>
   <string name="one_chapter">פרק %d</string>
   <string name="one_page">עמוד %d</string>
   <string name="one_verse">פסוק %d</string>
@@ -143,4 +143,4 @@
   <string name="some_chapters">%d פרקים</string>
   <string name="some_pages">%d עמודים</string>
   <string name="some_verses">%d פסוקים</string>
-<string name="prefs_red_letter_summary">Show words of Christ in red</string><string name="prefs_red_letter_title">Red Letter</string><string name="prefs_section_title_summary">Show non-canonical section titles</string><string name="prefs_section_title_title">Section Titles</string><string name="strongs_toggle_button_off">nnnn</string><string name="strongs_toggle_button_on">nnnn</string><string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string><string name="error_no_content">No content for selected verse</string><string name="mynote">My Note</string><string name="mynote_add">Add My Note</string><string name="mynote_saved">My Note saved</string><string name="mynote_view_edit">My Note</string><string name="mynotes">My Notes</string><string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string><string name="prefs_show_mynotes_title">Show My Note icons</string><string name="save">Save</string><string name="search_results">Find Results</string><string name="error_key_not_in_document">Not found in document</string><string name="error_page_too_large">Page is too large to be loaded</string><string name="prefs_text_size_sample_text">Sample text</string><string name="empty_list">No items to display</string><string name="prefs_show_bookmarks_summary">Show icon in bookmarked verses</string><string name="prefs_show_bookmarks_title">Show bookmark icons</string><string name="prefs_tilt_to_scroll_summary">Tilt device to scroll page down</string><string name="prefs_tilt_to_scroll_title">Tilt to scroll</string><string name="rdg_plan_title">Reading Plan</string><string name="rdg_plan_selector_title">Choose a Reading Plan</string><string name="rdg_plan_day">Day %s</string><string name="rdg_plan_set_start_jan1">Start Jan 1</string><string name="done">Done</string><string name="reset">Reset</string><string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string><string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string><string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string><string name="prefs_night_mode_automatic">Automatic</string><string name="download_refresh_book_list_menu_item">Refresh</string><string name="yes">Yes</string><string name="compare_translations">Compare translations</string><string name="doc_type_map">Map</string><string name="document_not_installed">Please download \'%s\'</string></resources>
+<string name="prefs_red_letter_summary">הצג באדום את דברי ישוע</string><string name="prefs_red_letter_title">אות אדומה</string><string name="prefs_section_title_summary">הצג כותרות משנה שאינן קאנוניות</string><string name="prefs_section_title_title">כותרות משנה</string><string name="strongs_toggle_button_off">nnnn</string><string name="strongs_toggle_button_on">nnnn</string><string name="speak_queue">תור</string><string name="speak_repeat">חזור שנית</string><string name="select_text">סמן טקסט</string><string name="select_text_help">גרור בעדינות כדי לסמן.\nואז לחץ על הסימון כדי להעתיק.</string><string name="error_no_content">אין תוכן עבור הפסוק הנבחר</string><string name="mynote">הערה אישית</string><string name="mynote_add">הוספת הערה אישית</string><string name="mynote_saved">ההערה נשמרה</string><string name="mynote_view_edit">הערה אישית</string><string name="mynotes">הערות אישיות</string><string name="prefs_show_mynotes_summary">הצג אייקון בפסוקים עם הערה</string><string name="prefs_show_mynotes_title">הצג אייקון של הערות</string><string name="save">שמירה</string><string name="search_results">תוצאות חיפוש</string><string name="error_key_not_in_document">לא נמצא</string><string name="error_page_too_large">העמוד גדול מדי ולא ניתן לטעון אותו</string><string name="prefs_text_size_sample_text">טקסט לדוגמה</string><string name="empty_list">אין פריטים</string><string name="prefs_show_bookmarks_summary">הצג אייקון בפסוקים בעלי סימניה</string><string name="prefs_show_bookmarks_title">הצג אייקונים לסימניה</string><string name="prefs_tilt_to_scroll_summary">הטה את המכשיר כדי לגלול למעלה ולמטה</string><string name="prefs_tilt_to_scroll_title">הטה כדי לגלול</string><string name="rdg_plan_title">Reading Plan</string><string name="rdg_plan_selector_title">Choose a Reading Plan</string><string name="rdg_plan_day">Day %s</string><string name="rdg_plan_set_start_jan1">Start Jan 1</string><string name="done">Done</string><string name="reset">Reset</string><string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string><string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string><string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string><string name="prefs_night_mode_automatic">Automatic</string><string name="download_refresh_book_list_menu_item">Refresh</string><string name="yes">Yes</string><string name="compare_translations">Compare translations</string><string name="doc_type_map">Map</string><string name="document_not_installed">Please download \'%s\'</string></resources>
