--- a/AndBible/res/values-fr/strings.xml
+++ b/AndBible/res/values-fr/strings.xml
@@ -23,25 +23,25 @@
   <string name="help">Aide</string>
   <string name="choosePassageBookName">Sélectionner un livre</string>
   <string name="choosePassageChapterName">Sélectionner un chapitre</string>
-  <string name="search_index">Rechercher Index</string>
+  <string name="search_index">Recherche dans l\'index</string>
   <string name="index_creation_required">Un index de recherche est nécessaire.\n\nLes index peuvent être téléchargés à partir d\'Internet ou créés localement.\n\nLe téléchargement est beaucoup plus rapide et les index téléchargés offrent plus de fonctionnalités.\n\nUne connexion internet est requise pour télécharger les index.</string>
   <string name="indexing_wait_msg">Quand l\'indexation sera terminée, vous retrouverez l\'écran de recherche</string>
   <string name="index">Index</string>
   <string name="index_download">Télécharger</string>
-  <string name="index_not_available_for_download">Cet index n\'est pas disponible au téléchargement</string>
+  <string name="index_not_available_for_download">Cet index n\'est pas disponible en téléchargement</string>
   <string name="index_create">Créer</string>
   <string name="progress_status">Progression</string>
   <string name="task_kill_warning">Ces tâches en cours d\'exécution risquent d\'être terminées si vous passez à une autre application avant d\'avoir fini.</string>
   <string name="no_tasks_running">Il n\'y a pas de tâches en cours d\'exécution.</string>
   <string name="delete_doc">Supprimer %s?</string>
   <!-- Search -->
-  <string name="search_words_group_prompt">Rechercher des versets</string>
+  <string name="search_words_group_prompt">Type de requête</string>
   <string name="search_all_words">Tous les mots</string>
   <string name="search_any_word">N\'importe quel mot</string>
   <string name="search_phrase">Phrase</string>
   <string name="search_result_count">%d résultats trouvés</string>
-  <string name="search_showing_first">Trop nombreux résultats. En premier %d</string>
-  <string name="search_bible_section_group_prompt">Étendue de la recherche</string>
+  <string name="search_showing_first">Trop de correspondances. Affichage des %d premiers résultats</string>
+  <string name="search_bible_section_group_prompt">Plage de recherche</string>
   <string name="search_all_bible">Bible en entier</string>
   <string name="search_new_testament">Nouveau Testament</string>
   <string name="search_old_testament">Ancien Testament</string>
@@ -64,12 +64,12 @@
   <string name="prefs_interface_locale_summary">Choisir une langue personnalisée dans l\'interface utilisateur</string>
   <string name="locale_change_warning">L\'application sera redémarrée pour prendre en compte la nouvelle langue d\'interface</string>
   <!-- Notes screen -->
-  <string name="no_chapter_notes">Pas de notes dans ce chapitre</string>
-  <string name="no_verse_notes">Pas de note dans ce verset</string>
+  <string name="no_chapter_notes">Aucune note dans ce chapitre</string>
+  <string name="no_verse_notes">Aucune note dans ce verset</string>
   <string name="previous">Précédent</string>
   <string name="next">Suivant</string>
   <!--  Strongs -->
-  <string name="strongs">Dictionnaire Strong\'s</string>
+  <string name="strongs">Dictionnaire Strong</string>
   <string name="strongs_not_installed">Téléchargez un dictionnaire Strong\'s Hébreu et Grec</string>
   <!-- Module download -->
   <string name="download">Télécharger documents</string>
@@ -141,7 +141,7 @@
   <string name="morph_robinson_not_installed">Veuillez télécharger le dictionnaire « Robinson analyse morphologique Codes »</string>
   <string name="prefs_show_morphology_summary">Afficher la morphologie grecque de Robinson</string>
   <string name="prefs_show_morphology_title">Codes morphologiques</string>
-  <string name="choosePassageVerseName">Choisissez Verset</string>
+  <string name="choosePassageVerseName">Sélectionner un verset</string>
   <string name="prefs_navigate_to_verse_summary">Choisissez le verset (et le chapitre) lors de la sélection d\'un passage</string>
   <string name="prefs_navigate_to_verse_title">Aller au verset</string>
   <string name="one_chapter">%d chapitre</string>
@@ -156,4 +156,4 @@
   <string name="prefs_section_title_title">Titres de section</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="speak_queue">File d\'attente</string><string name="speak_repeat">Répéter</string><string name="select_text">Sélectionner le texte</string><string name="select_text_help">Faites glisser lentement pour sélectionner. Ensuite, touchez la sélection à copier.</string><string name="error_no_content">Aucun contenu pour le verset sélectionné</string><string name="mynote">Mon carnet de notes</string><string name="mynote_add">Ajouter à mon carnet de notes</string><string name="mynote_saved">Sauvegarde de mon carnet de notes</string><string name="mynote_view_edit">Mon carnet de notes</string><string name="mynotes">Mes notes</string><string name="prefs_show_mynotes_summary">Afficher les icônes dans les versets avec Mon carnet de notes</string><string name="prefs_show_mynotes_title">Afficher les icônes de Mon carnet de notes</string><string name="save">Enregistrer</string><string name="search_results">Résultats de la recherche</string><string name="error_key_not_in_document">Pas trouvé dans le document</string><string name="error_page_too_large">La page est trop lourde pour être chargé</string><string name="prefs_text_size_sample_text">Exemple de texte</string><string name="empty_list">Aucun élément à afficher</string><string name="prefs_show_bookmarks_summary">Afficher l\'icône dans les versets mis en signet</string><string name="prefs_show_bookmarks_title">Afficher les icônes des signets</string><string name="prefs_tilt_to_scroll_summary">"Inclinez l\'appareil pour faire défiler la page vers le haut/bas"</string><string name="prefs_tilt_to_scroll_title">Inclinez pour faire défiler</string><string name="rdg_plan_title">Plan de lecture</string><string name="rdg_plan_selector_title">Choisissez un plan de lecture</string><string name="rdg_plan_day">Jour %s</string><string name="rdg_plan_set_start_jan1">Commence 1 Jan</string><string name="done">Fait</string><string name="reset">Réinitialiser</string><string name="rdg_plan_y1ot1nt1_chronological">La Bible chronologique en 1 an</string><string name="rdg_plan_y1ot1nt1_OTandNT">La Bible en 1 an - AT et NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">La Bible en 1an - AT ensuite NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">La Bible en 1 an (M\'Cheyne)</string><string name="rdg_plan_y1ntpspr">Nouveau Testament, Psaumes et Proverbes en 1 an</string><string name="prefs_night_mode_automatic">Automatique</string><string name="download_refresh_book_list_menu_item">Rafraîchir</string><string name="yes">Oui</string><string name="compare_translations">Comparer les traductions</string><string name="doc_type_map">Carte</string><string name="document_not_installed">Veuillez télécharger \'%s\'</string></resources>
+<string name="speak_queue">File d\'attente</string><string name="speak_repeat">Répéter</string><string name="select_text">Sélectionner le texte</string><string name="select_text_help">Faites glisser lentement pour sélectionner. Ensuite, touchez la sélection à copier.</string><string name="error_no_content">Aucun contenu pour le verset sélectionné</string><string name="mynote">Mon carnet de notes</string><string name="mynote_add">Ajouter à mon carnet de notes</string><string name="mynote_saved">Sauvegarde de mon carnet de notes</string><string name="mynote_view_edit">Mon carnet de notes</string><string name="mynotes">Mes notes</string><string name="prefs_show_mynotes_summary">Afficher les icônes dans les versets avec Mon carnet de notes</string><string name="prefs_show_mynotes_title">Afficher les icônes de mon carnet de notes</string><string name="save">Enregistrer</string><string name="search_results">Résultats de la recherche</string><string name="error_key_not_in_document">Aucune correspondance dans le document</string><string name="error_page_too_large">La page est trop grande pour être chargé</string><string name="prefs_text_size_sample_text">Exemple de texte</string><string name="empty_list">Aucun élément à afficher</string><string name="prefs_show_bookmarks_summary">Afficher l\'icône dans les versets mis en signet</string><string name="prefs_show_bookmarks_title">Afficher les icônes des signets</string><string name="prefs_tilt_to_scroll_summary">"Inclinez l\'appareil pour faire défiler la page vers le haut/bas"</string><string name="prefs_tilt_to_scroll_title">Inclinez pour faire défiler</string><string name="rdg_plan_title">Plan de lecture</string><string name="rdg_plan_selector_title">Choisissez un plan de lecture</string><string name="rdg_plan_day">Jour %s</string><string name="rdg_plan_set_start_jan1">Commence 1 Jan</string><string name="done">Fait</string><string name="reset">Réinitialiser</string><string name="rdg_plan_y1ot1nt1_chronological">La Bible chronologique en 1 an</string><string name="rdg_plan_y1ot1nt1_OTandNT">La Bible en 1 an - AT et NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">La Bible en 1an - AT ensuite NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">La Bible en 1 an (M\'Cheyne)</string><string name="rdg_plan_y1ntpspr">Nouveau Testament, Psaumes et Proverbes en 1 an</string><string name="prefs_night_mode_automatic">Automatique</string><string name="download_refresh_book_list_menu_item">Rafraîchir</string><string name="yes">Oui</string><string name="compare_translations">Comparer les traductions</string><string name="doc_type_map">Carte</string><string name="document_not_installed">Veuillez télécharger \'%s\'</string><string name="backup">Sauvegarder</string><string name="backup_success">Mes notes et signets sauvegardés dans %s sur la carte SD</string><string name="restore">Restaurer</string><string name="restore_confirmation">Écraser mes notes et signets?</string><string name="restore_success">Mes notes et signets restaurés de %s sur la carte SD</string></resources>
