--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -228,4 +228,4 @@
     <string name="error_page_too_large">Sayfa yüklenmek için fazla büyük</string>
     <string name="error_key_not_in_document">Belgede bulunmadı</string>
     <string name="empty_list">Öğe bulunmadı</string>
-</resources>
+<string name="backup">Backup</string><string name="backup_success">My Notes and Bookmarks saved in %s on the SD card</string><string name="restore">Restore</string><string name="restore_confirmation">Overwrite My Notes and Bookmarks?</string><string name="restore_success">My Notes and Bookmarks restored from %s on the SD card</string></resources>
