--- a/AndBible/res/values-ar/strings.xml
+++ b/AndBible/res/values-ar/strings.xml
@@ -29,13 +29,13 @@
     <string name="choosePassageVerseName">إختر آية</string>
 
     <!--  Search -->
-    <string name="search_index">Search Index</string>
-    <string name="index_creation_required">"An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n"</string>
-    <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
-    <string name="index">Index</string>
-    <string name="index_download">Download</string>
-    <string name="index_not_available_for_download">This index is not available for download</string>
-    <string name="index_create">Create</string>
+    <string name="search_index">"بحث الفهرس"</string>
+    <string name="index_creation_required">"الفهرسة ضرورية لعملية البحث.\n\nتستطيع تحميل الفهرس عن طريق الانترنت أو انشاءه على جهازك.\n\nتحميل الفهرس أسرع طريقة و تحوي العديد المزايا.\n\nيجب عليك الاتصال بشبكة الانترنت لتحميل الفهرس.\n"</string>
+    <string name="indexing_wait_msg">بعد اكتمال عملية الفهرسة، سيتم توجيهك لشاشة البحث.</string>
+    <string name="index">فهرس</string>
+    <string name="index_download">تحميل</string>
+    <string name="index_not_available_for_download">الفهرس غير متاح للتحميل</string>
+    <string name="index_create">إنشاء</string>
 
     <!-- Tasks -->
     <string name="progress_status">Progress</string>
