Committed translation (it).

--- a/AndBible/res/values-it/strings.xml
+++ b/AndBible/res/values-it/strings.xml
@@ -31,51 +31,51 @@
     <!--  Search -->
     <string name="search_index">Indice di Ricerca</string>
     <string name="index_creation_required">"Per fare una ricerca usa un indice.\n\nGli indici possono essere scaricati da Internet o creati localmente.\n\nLo scaricamento e\' piu\' veloce e gli indici scaricati hanno piu\' elementi.\n\nE\' necessaria la connessione ad Internet per scaricare gli indici."</string>
-    <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
-    <string name="index">Index</string>
-    <string name="index_download">Download</string>
-    <string name="index_not_available_for_download">This index is not available for download</string>
-    <string name="index_create">Create</string>
+    <string name="indexing_wait_msg">Quando l\'indice e\' completo passi alla schermata della ricerca.</string>
+    <string name="index">Indice</string>
+    <string name="index_download">Scarica</string>
+    <string name="index_not_available_for_download">Questo indice e\' disponibile da scaricare</string>
+    <string name="index_create">Crea</string>
 
     <!-- Tasks -->
-    <string name="progress_status">Progress</string>
-    <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
-    <string name="no_tasks_running">There are no tasks currently being executed.</string>
+    <string name="progress_status">Progresso</string>
+    <string name="task_kill_warning">Queste operazioni lunghe potrebbero terminare se passi ad un\'altra applicazione prima della fine.</string>
+    <string name="no_tasks_running">Non ci sono operazioni in corso al momento.</string>
 
     <!-- Search -->
-    <string name="search_results">Find Results</string>
-    <string name="search_words_group_prompt">Find verses</string>
-    <string name="search_all_words">All words</string>
-    <string name="search_any_word">Any word</string>
-    <string name="search_phrase">Phrase</string>
-    <string name="search_result_count">%d matches found</string>
-    <string name="search_showing_first">Too many matches. Showing first %d</string>
-    <string name="search_bible_section_group_prompt">Search Where</string>
-    <string name="search_all_bible">Whole bible</string>
-    <string name="search_new_testament">New Testament</string>
-    <string name="search_old_testament">Old Testament</string>
-    <string name="search_current_book">Current book</string>
-    <string name="error_executing_search">Invalid search query</string>
+    <string name="search_results">Trova il risultato</string>
+    <string name="search_words_group_prompt">"Trova i versi\n\n\n"</string>
+    <string name="search_all_words">Tutte le parole</string>
+    <string name="search_any_word">Ogni parola</string>
+    <string name="search_phrase">Frase</string>
+    <string name="search_result_count">%d compatibilita\' trovata</string>
+    <string name="search_showing_first">Troppe compatibilita\'. Mostra la prima %d</string>
+    <string name="search_bible_section_group_prompt">Trova Dove</string>
+    <string name="search_all_bible">"Bibbia intera "</string>
+    <string name="search_new_testament">Nuovo Testamento</string>
+    <string name="search_old_testament">Antico Testamento</string>
+    <string name="search_current_book">Libro attuale</string>
+    <string name="error_executing_search">Ricerca invalida</string>
 
     <!-- Preferences -->
-    <string name="prefs_show_verseno_title">Verse numbers</string>
-    <string name="prefs_show_verseno_summary">Show verse numbers</string>
-    <string name="prefs_verse_per_line_title">One verse per line</string>
-    <string name="prefs_verse_per_line_summary">Show each verse on a different line</string>
-    <string name="prefs_show_bookmarks_title">Show bookmark icons</string>
-    <string name="prefs_show_bookmarks_summary">Show icon in bookmarked verses</string>
-    <string name="prefs_show_mynotes_title">Show My Note icons</string>
+    <string name="prefs_show_verseno_title">Numeri dei versi</string>
+    <string name="prefs_show_verseno_summary">Mostra i numeri dei versi</string>
+    <string name="prefs_verse_per_line_title">Un verso per linea</string>
+    <string name="prefs_verse_per_line_summary">Mostra ogni verso in una linea diversa</string>
+    <string name="prefs_show_bookmarks_title">Mostra le icone del segnalibro</string>
+    <string name="prefs_show_bookmarks_summary">Mostra le icone nei versi con il segnalibro</string>
+    <string name="prefs_show_mynotes_title">Mostra le icone dei miei appunti</string>
     <string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string>
-    <string name="prefs_show_notes_title">Footnotes and x-refs</string>
-    <string name="prefs_show_notes_summary">Show footnotes and cross-references</string>
-    <string name="prefs_show_strongs_title">Show Strong\'s numbers</string>
-    <string name="prefs_show_strongs_summary">Links to Greek &amp; Hebrew definitions</string>
-    <string name="prefs_show_morphology_title">Morphological codes</string>
-    <string name="prefs_show_morphology_summary">Show Robinson\'s Greek morphology</string>
-    <string name="prefs_section_title_title">Section titles</string>
-    <string name="prefs_section_title_summary">Show non-canonical section titles</string>
-    <string name="prefs_red_letter_title">Red Letter</string>
-    <string name="prefs_red_letter_summary">Show words of Christ in red</string>
+    <string name="prefs_show_notes_title">Note e x-referenze</string>
+    <string name="prefs_show_notes_summary">Mostra note e referenze</string>
+    <string name="prefs_show_strongs_title">Mostra i numeri di Strong?</string>
+    <string name="prefs_show_strongs_summary">"collegamenti alle definizioni greche ed ebraiche "</string>
+    <string name="prefs_show_morphology_title">Codici morfologici</string>
+    <string name="prefs_show_morphology_summary">Mostra la morfologia greca di Robinson</string>
+    <string name="prefs_section_title_title">i titoli delle sezioni</string>
+    <string name="prefs_section_title_summary">Mostra i titoli delle sezioni non-canoniche</string>
+    <string name="prefs_red_letter_title">Lettera Rossa</string>
+    <string name="prefs_red_letter_summary">Mostra le parole di Cristo in rosso</string>
     <string name="prefs_tilt_to_scroll_title">Tilt to scroll</string>
     <string name="prefs_tilt_to_scroll_summary">Tilt device to scroll page down</string>
     <string name="prefs_night_mode_title">Night mode</string>
